# OBS-Custom-Websocket-Plugin

./: .gitignore  .gitmodules  BANNER_API.md  CEF_CRASH_ROOT_CAUSE_ANALYSIS.md  CMakeLists.txt  README.md  WASAPI_CRASH_FIX_SUMMARY_V2.md  build.bat  buildspec.json  commands.txt  compile_test.cpp  github_commands.txt  test_banner_api.py  web_banner_control.html
.claude/: settings.local.json
.github/scripts/: Build-Windows.ps1
build-windows/: CMakeCache.txt
mdns_test/: CMakeLists.txt  build.bat  main.cpp
obs_plugin/: CMakeLists.txt  SHUTDOWN_DEBUG_CHECKLIST.md  TODO.md  readme.md
obs_plugin/docs/: BANNERS_VS_OVERLAYS.md  BANNER_API.md  CSS_ANIMATION_GUIDE.md  OVERLAY_SYSTEM.md  README.md  api-reference.md  banner-system.md  development.md  development_prompt.md  enhanced-connection-system.md  examples.md  installation.md  troubleshooting.md
obs_plugin/src/: ServiceSelectionDialog.ui  banner_manager.cpp  banner_manager.hpp  mdns_discovery.cpp  mdns_discovery.hpp  obs_plugin.cpp  obs_plugin.hpp  service_selection_dialog.cpp  service_selection_dialog.hpp  todo.txt  vortideck_common.h
obs_plugin/src/legacy/: visibility_monitor.h
obs_plugin/src/sources/: banner_source.cpp
src/: banner_source.h  overlay_source.cpp  overlay_source.h  visibility_monitor.cpp
